icinga (1.13.4-1) UNRELEASED; urgency=medium

  * Team upload.
  * New upstream release.
    - Fixes CVE-2016-9566.
  * Update watch file to match tagged releases too (not only downloads).

 -- Bas Couwenberg <sebastic@debian.org>  Fri, 23 Dec 2016 09:40:28 +0100

icinga (1.13.3-4) unstable; urgency=medium

  [ Bas Couwenberg ]
  * Team upload.
  * Update Vcs-Git URL to use HTTPS.
  * Change mysql-client dependency to default-mysql-client.
    (closes: #848438)
  * Restructure control file with cme.
  * Add Homepage field to control file.
  * Switch from dpatch to source format 3.0 (quilt).
  * Drop dpkg-dev build dependency, required version available in oldstable.
  * Fix duplicate word in copyright file.
  * Add patch to fix spelling errors.
  * Add upstream metadata.
  * Add override for spelling-error-in-readme-debian false positive.
  * Update copyright file using copyright-format 1.0.
  * Fix duplicate short description and spelling errors in long description.
  * Drop unused override for package-contains-empty-directory.
  * Add comments to lintian overrides.
  * Create /var/run/icinga in idoutils init script too.
  * Drop unused override for dir-or-file-in-var-run.
  * Bump debhelper compatibility to 9.
  * Enable all hardening buildflags.
  * Add lintian overrides for package-contains-empty-directory.
  * Don't install .in templates in examples.
  * Don't install p1.pl with execute bit set.
  * Use dh sequencer in rules file.
  * Use rm -f for all rm commands.
  * Don't set {C,CPP,LD}FLAGS explicitly, already set by debhelper.
  * Add build dependencies for test target.
  * Override dh_auto_test to create required directories.
  * Update watch file to handle common issues.
  * Update Brazilian Portuguese debconf templates translation.
    Thanks to Adriano Rafael Gomes.
    (closes: #799421)
  * Drop unused substitution variables.
  * Don't hardcode invoke-rc.d path in icinga-cgi.postinst.
  * Use dh-autoreconf for retooling.