@@ -4,6 +4,7 @@ icinga (1.13.4-1) UNRELEASED; urgency=medium
   * New upstream release.
     - Fixes CVE-2016-9566.
   * Update watch file to match tagged releases too (not only downloads).
+  * Refresh patches.
 
  -- Bas Couwenberg <sebastic@debian.org>  Fri, 23 Dec 2016 09:40:28 +0100
 
